syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fizzgate.fizz.examples.grpc.user";
option java_outer_classname = "UserProto";

package com.fizzgate.fizz.examples.grpc.user;

service UserService {
    rpc findById(FindById) returns (User) {}

    rpc findAll(FindAll) returns (User) {}

    rpc insert(User) returns (User) {}
}

message User {
    string id = 1;
    string name = 2;
}

message FindById {
    string id = 1;
}

message FindAll {}